<resources>
    <string name="app_name">StoryTells</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="detail"> Detail Cerita </string>
    <string name="message_welcome_page">Punya pengalaman menarik? \nAtau cerita lucu? \nKirim aja!!</string>
    <string name="title_welcome_page">Selamat datang!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="next">silahkan login</string>
    <string name="message">coba</string>
    <string name="succes_login">login berhasil !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Selamat datang kembali!</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="desc">Deskripsi</string>
    <string name="story">Unggah Media</string>
    <string name="fill_email">Isi dengan email anda</string>
    <string name="retry">Coba lagi</string>
    <string name="fill_password">Password tidak boleh kosong</string>
    <string name="fill_username">nama tidak boleh kosong!</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>